--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8044:8044"
     volumes:
       - ./:/app
+      - ./files/:/app/back/files
     command: bash -c "
       pip install --no-cache-dir -r requirements.txt ;
       uvicorn src.main:app --host 0.0.0.0 --port 8044"
